--- a/public/scss/partials/_business.scss
+++ b/public/scss/partials/_business.scss
@@ -20,7 +20,7 @@ div.row#business-header {
             margin-bottom: 40px;
         }
 
-        p.info {
+        .info {
             border-bottom: 1px solid $grey-separator;
             font-size: 16px;
             min-height: 30px;
@@ -57,6 +57,16 @@ div.row#business-header {
                     font-style: italic;
                     padding-left: 5px;
                 }
+            }
+
+            &.services {
+                ul {
+                    font-weight: 200;
+                    font-size: 12px;
+                    list-style-type: none;
+                }
+
+
             }
         }
 
