--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8216,9 +8216,16 @@ div.day {
     padding-bottom: 30px; }
     .hairfies-list .hairfie-picture .img-container {
       position: relative; }
-    .hairfies-list .hairfie-picture img {
-      border-radius: 5px;
-      width: 100%; }
+      .hairfies-list .hairfie-picture .img-container img.main {
+        width: 100%;
+        border-radius: 5px; }
+      .hairfies-list .hairfie-picture .img-container img.thumb {
+        width: 25%;
+        position: absolute;
+        top: 5;
+        right: 5;
+        border-radius: 2px;
+        border: 1px solid white; }
     .hairfies-list .hairfie-picture .circle {
       line-height: 25px;
       position: absolute;
