--- a/public/scss/partials/_hairfiesList.scss
+++ b/public/scss/partials/_hairfiesList.scss
@@ -26,11 +26,22 @@ $circle-width: 25px;
 
         .img-container {
             position: relative;
-        }
 
-        img {
-            border-radius: 5px;
-            width: 100%;
+            img {
+                &.main {
+                    width: 100%;
+                    border-radius: 5px;
+                }
+
+                &.thumb {
+                    width: 25%;
+                      position: absolute;
+                      top: 5;
+                      right: 5;
+                      border-radius: 2px;
+                      border: 1px solid white;
+                }
+            }
         }
 
         .circle {
