--- a/public/scss/partials/_business.scss
+++ b/public/scss/partials/_business.scss
@@ -64,6 +64,11 @@ div.row#business-header {
                     font-weight: 200;
                     font-size: 12px;
                     list-style-type: none;
+
+                    li.title {
+                        font-size: 14px;
+                        font-weight: 400;
+                    }
                 }
 
 
