--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8381,7 +8381,7 @@ div.day {
     padding-bottom: 30px; }
     .hairfies-list .hairfie-picture .img-container {
       position: relative; }
-      .hairfies-list .hairfie-picture .img-container img.main {
+      .hairfies-list .hairfie-picture .img-container img.main-picture {
         width: 100%;
         border-radius: 5px; }
       .hairfies-list .hairfie-picture .img-container img.thumb {
@@ -8399,7 +8399,7 @@ div.day {
     .hairfies-list .hairfie-picture .delete-button {
       line-height: 1;
       position: absolute;
-      top: 10px;
+      bottom: 10px;
       right: 10px; }
 
 .twitter-typeahead {
