--- a/public/scss/partials/_hairfiesList.scss
+++ b/public/scss/partials/_hairfiesList.scss
@@ -28,7 +28,7 @@ $circle-width: 25px;
             position: relative;
 
             img {
-                &.main {
+                &.main-picture {
                     width: 100%;
                     border-radius: 5px;
                 }
@@ -56,7 +56,7 @@ $circle-width: 25px;
             @extend .red-circle;
             line-height: 1;
             position: absolute;
-            top: 10px;
+            bottom: 10px;
             right: 10px;
         }
     }
