--- a/public/scss/partials/_colors.scss
+++ b/public/scss/partials/_colors.scss
@@ -42,3 +42,8 @@ $open-color: #5cb85c;
         color: $grey;
     }
 }
+
+.formControl .media-object.thumbnail {
+    width: 58px;
+    height: 58px;
+}
