--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7911,6 +7911,12 @@ nav.header {
     nav.header #formLogin input {
       margin-bottom: 5px; }
 
+.top-nav > li {
+  display: inline-block;
+  float: left; }
+  .top-nav > li a {
+    color: #818896; }
+
 @media (min-width: 768px) {
   nav.header {
     height: 100px; }
@@ -7918,13 +7924,18 @@ nav.header {
       height: 100%; }
 
   .navbar-brand,
-  .navbar-nav li a {
+  .top-nav li a {
     line-height: 100px;
     height: 100px;
     padding-top: 0;
     font-weight: 200;
-    font-size: 21px; }
+    font-size: 21px; } }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .navbar-brand,
+    .top-nav li a {
+      font-size: 15px; } }
 
+@media (min-width: 768px) {
   #logo {
     width: 138px;
     height: 38px;
@@ -7935,10 +7946,19 @@ nav.header {
     height: 50px; } }
 @media (max-width: 768px) {
   #logo {
-    width: 70px; } }
-img.profile {
-  width: 50px;
-  height: 50px; }
+    width: 70px; }
+
+  .top-nav > li a {
+    font-weight: 200;
+    font-size: 12px; } }
+@media (max-width: 768px) {
+  img.profile {
+    width: 25px !important;
+    height: 25px !important; } }
+@media (min-width: 768px) {
+  img.profile {
+    width: 50px;
+    height: 50px; } }
 
 div.row#business-header {
   height: 300px;
@@ -8305,69 +8325,76 @@ div.day {
 .business-photos .thumbnail img {
   padding: 9px; }
 
+.proLayout #wrapper {
+  margin-top: 100px; }
+
 .proLayout .navbar .container-fluid {
   padding-left: 20px;
   padding-right: 20px; }
 
-.sidebar {
-  display: none; }
-
 @media (min-width: 768px) {
-  .sidebar {
+  #wrapper:not(.withoutSidebar) {
+    padding-left: 225px; }
+
+  #page-wrapper {
+    padding: 10px; }
+
+  .side-nav {
     position: fixed;
     top: 100px;
     bottom: 0;
-    left: 0;
+    left: 225px;
+    margin-left: -225px;
+    margin-right: -21px;
+    /* 20px padding + 1px border */
+    width: 225px;
     z-index: 1000;
     display: block;
-    padding: 20px;
+    padding: 10px;
     overflow-x: hidden;
     overflow-y: auto;
-    /* Scrollable contents if viewport is shorter than content. */
-    background-color: #EA5C62; } }
-.nav-sidebar {
-  margin-right: -21px;
-  /* 20px padding + 1px border */
-  margin-bottom: 20px;
-  margin-left: -20px; }
+    background-color: #EA5C62; }
 
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-  color: #FFFFFF; }
-  .nav-sidebar > li > a span.icon, .nav-sidebar > li > a span.icon-address, .nav-sidebar > li > a span.icon-phone, .nav-sidebar > li > a span.icon-website, .nav-sidebar > li > a span.icon-timetable, .nav-sidebar > li > a span.icon-description, .nav-sidebar > li > a span.icon-right-arrow, .nav-sidebar > li > a span.icon-discount, .nav-sidebar > li > a span.icon-price, .nav-sidebar > li > a span.icon-open, .nav-sidebar > li > a span.icon-closed {
-    float: right; }
+  .side-nav > li > a {
+    width: 205px; }
 
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-  color: #818896;
-  background-color: #F6F6F7; }
-  .nav-sidebar > .active > a span.icon, .nav-sidebar > .active > a span.icon-address, .nav-sidebar > .active > a span.icon-phone, .nav-sidebar > .active > a span.icon-website, .nav-sidebar > .active > a span.icon-timetable, .nav-sidebar > .active > a span.icon-description, .nav-sidebar > .active > a span.icon-right-arrow, .nav-sidebar > .active > a span.icon-discount, .nav-sidebar > .active > a span.icon-price, .nav-sidebar > .active > a span.icon-open, .nav-sidebar > .active > a span.icon-closed,
-  .nav-sidebar > .active > a:hover span.icon,
-  .nav-sidebar > .active > a:hover span.icon-address,
-  .nav-sidebar > .active > a:hover span.icon-phone,
-  .nav-sidebar > .active > a:hover span.icon-website,
-  .nav-sidebar > .active > a:hover span.icon-timetable,
-  .nav-sidebar > .active > a:hover span.icon-description,
-  .nav-sidebar > .active > a:hover span.icon-right-arrow,
-  .nav-sidebar > .active > a:hover span.icon-discount,
-  .nav-sidebar > .active > a:hover span.icon-price,
-  .nav-sidebar > .active > a:hover span.icon-open,
-  .nav-sidebar > .active > a:hover span.icon-closed,
-  .nav-sidebar > .active > a:focus span.icon,
-  .nav-sidebar > .active > a:focus span.icon-address,
-  .nav-sidebar > .active > a:focus span.icon-phone,
-  .nav-sidebar > .active > a:focus span.icon-website,
-  .nav-sidebar > .active > a:focus span.icon-timetable,
-  .nav-sidebar > .active > a:focus span.icon-description,
-  .nav-sidebar > .active > a:focus span.icon-right-arrow,
-  .nav-sidebar > .active > a:focus span.icon-discount,
-  .nav-sidebar > .active > a:focus span.icon-price,
-  .nav-sidebar > .active > a:focus span.icon-open,
-  .nav-sidebar > .active > a:focus span.icon-closed {
-    display: none; }
+  .side-nav > li > a {
+    color: white !important; }
+    .side-nav > li > a span.icon, .side-nav > li > a span.icon-address, .side-nav > li > a span.icon-phone, .side-nav > li > a span.icon-website, .side-nav > li > a span.icon-timetable, .side-nav > li > a span.icon-description, .side-nav > li > a span.icon-right-arrow, .side-nav > li > a span.icon-discount, .side-nav > li > a span.icon-price, .side-nav > li > a span.icon-open, .side-nav > li > a span.icon-closed {
+      float: right; }
 
+  .side-nav > .active > a,
+  .side-nav > .active > a:hover,
+  .side-nav > .active > a:focus {
+    color: #818896;
+    background-color: #F6F6F7; }
+    .side-nav > .active > a span.icon, .side-nav > .active > a span.icon-address, .side-nav > .active > a span.icon-phone, .side-nav > .active > a span.icon-website, .side-nav > .active > a span.icon-timetable, .side-nav > .active > a span.icon-description, .side-nav > .active > a span.icon-right-arrow, .side-nav > .active > a span.icon-discount, .side-nav > .active > a span.icon-price, .side-nav > .active > a span.icon-open, .side-nav > .active > a span.icon-closed,
+    .side-nav > .active > a:hover span.icon,
+    .side-nav > .active > a:hover span.icon-address,
+    .side-nav > .active > a:hover span.icon-phone,
+    .side-nav > .active > a:hover span.icon-website,
+    .side-nav > .active > a:hover span.icon-timetable,
+    .side-nav > .active > a:hover span.icon-description,
+    .side-nav > .active > a:hover span.icon-right-arrow,
+    .side-nav > .active > a:hover span.icon-discount,
+    .side-nav > .active > a:hover span.icon-price,
+    .side-nav > .active > a:hover span.icon-open,
+    .side-nav > .active > a:hover span.icon-closed,
+    .side-nav > .active > a:focus span.icon,
+    .side-nav > .active > a:focus span.icon-address,
+    .side-nav > .active > a:focus span.icon-phone,
+    .side-nav > .active > a:focus span.icon-website,
+    .side-nav > .active > a:focus span.icon-timetable,
+    .side-nav > .active > a:focus span.icon-description,
+    .side-nav > .active > a:focus span.icon-right-arrow,
+    .side-nav > .active > a:focus span.icon-discount,
+    .side-nav > .active > a:focus span.icon-price,
+    .side-nav > .active > a:focus span.icon-open,
+    .side-nav > .active > a:focus span.icon-closed {
+      display: none; } }
+@media (max-width: 768px) {
+  .navbar-collapse.navbar-ex1-collapse.collapse {
+    max-height: 100%; } }
 .red-circle, .hairfies-list .hairfie-picture .circle, .hairfies-list .hairfie-picture .delete-button {
   width: 25px;
   height: 25px;
