--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -21,3 +21,4 @@ $icon-font-path: "../components/bootstrap/fonts/";
 @import "partials/search";
 @import "partials/booking";
 @import "partials/starRating";
+@import "partials/form";
