--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7058,6 +7058,14 @@ nav.header {
     width: 50px;
     height: 50px; } }
 
+.navbar-collapse.in {
+  overflow-y: visible; }
+
+.dropdown-menu.login, .twitter-typeahead .login.tt-dropdown-menu {
+  right: 0;
+  left: auto;
+  min-width: 300px; }
+
 div.row#business-header {
   height: 300px;
   margin-top: 20px; }
