--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -58,6 +58,10 @@ nav.header {
         width:70px;
     }
 
+    .top-nav {
+        float: right;
+    }
+
     .top-nav > li a {
         font-weight: 200;
         font-size: 12px;
