add booking not finshed

--- a/public/css/temp.css
+++ b/public/css/temp.css
@@ -29,3 +29,8 @@ figcaption a.address {
 .hairfie-singleView#content .single-view .like-group .cta {
   width: 100%;
 }
+
+.cal caption {
+    display: table-caption;
+    font-size: 21px;
+}
