--- a/public/css/temp.css
+++ b/public/css/temp.css
@@ -65,3 +65,7 @@ figcaption a.address {
   top: 57px;
 }
 
+.loading {
+  width: 100%; height: 100%;
+  background:url(/img/loader.gif) no-repeat center center;
+}
