--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -36,6 +36,9 @@ body {
 //     // @import "front/page-hairfie";
 // }
 
+@import "backoffice/colors";
+@import "backoffice/homePro";
+
 .backoffice {
     @import "backoffice/colors";
     @import "backoffice/icons";
