--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -38,6 +38,7 @@ body {
 
 @import "backoffice/colors";
 @import "backoffice/homePro";
+@import "backoffice/starRating";
 
 .backoffice {
     @import "backoffice/colors";
