--- a/public/css/temp.css
+++ b/public/css/temp.css
@@ -69,3 +69,7 @@ figcaption a.address {
   width: 100%; height: 100%;
   background:url(/img/loader.gif) no-repeat center center;
 }
+
+.write-review {
+  margin-top: 85px;
+}
