--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -13,6 +13,16 @@ body {
     overflow-x: hidden;
 }
 
+.landing header.hidden-xs, .headline, .searchbar.hidden-xs {
+    opacity: 0;
+}
+
+.no-js {
+    .landing header.hidden-xs, .headline , .searchbar.hidden-xs {
+      opacity: 1;
+    }
+}
+
 
 // //@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600);
 // //@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
