--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -23,6 +23,9 @@ body {
     }
 }
 
+@import "main";
+@import "temp";
+
 
 // //@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600);
 // //@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
