--- a/public/scss/_temp.scss
+++ b/public/scss/_temp.scss
@@ -71,6 +71,7 @@ figcaption a.address {
 
 .loading {
   width: 100%; height: 100%;
+  min-height: 100px;
   max-height: 200px;
   background:url(/img/loader_128.png) no-repeat center center;
   background-size: 64px 64px;
