--- a/public/scss/_temp.scss
+++ b/public/scss/_temp.scss
@@ -138,3 +138,7 @@ div#app {
 #content.search .main-content .tab-pane section .rating .note {
   margin-top: -4px;
 }
+
+.salon#content section.salon-content section .map {
+  background: #E9E5DC;
+}
