--- a/public/scss/_temp.scss
+++ b/public/scss/_temp.scss
@@ -142,3 +142,8 @@ div#app {
 .salon#content section.salon-content section .map {
   background: #E9E5DC;
 }
+
+#content.search .main-content .tab-pane section img {
+  max-width: 100%;
+  min-height: none;
+}
