--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12730,9 +12730,7 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
   width: 100%;
   overflow: hidden;
   position: relative;
-  cursor: pointer; 
-  /* max-height: 100%; */
-}
+  cursor: pointer; }
 
 .hairfies .single-hairfie figure a {
   width: 100%;
