--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14257,7 +14257,6 @@ section.home-footer .row > div p {
 
 .salon#content .main-content section.salon-info .row {
   background-color: white;
-  padding-bottom: 20px;
   padding-left: 35px; }
 
 @media screen and (max-width: 767px) {
@@ -14267,7 +14266,6 @@ section.home-footer .row > div p {
 .salon#content .main-content section.salon-info .row:first-child {
   margin-top: -105px;
   width: auto;
-  padding-bottom: 20px;
   padding-top: 30px;
   padding-left: 35px;
   border-top-left-radius: 4px;
@@ -14299,6 +14297,10 @@ section.home-footer .row > div p {
 
 .salon#content .main-content section.salon-info .horraires .opened, .salon#content .main-content section.salon-info .horraires .closed {
   font-weight: 600; }
+
+.salon#content .main-content section.salon-info .social {
+  height: auto;
+  padding: 20px 0px 40px 35px; }
 
 @media screen and (max-width: 767px) {
   .salon#content .main-content section.salon-info .social {
@@ -15562,7 +15564,4 @@ div#app {
   .star-rating:after {
     clear: both; }
 
-  .salon-description {
-    padding-top: 20px;
-    width: 100%;
-  }
+/*# sourceMappingURL=style.css.map */
