Button Mobile ok, CSS update

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14737,10 +14737,11 @@ section.home-footer .row > div p {
   margin-left: -15px; }
 
 .hairfie-singleView#content .single-view #carousel-hairfie .item {
-  height: 570px; }
+  height: 570px;
+  background-color: #848484; }
 
 .hairfie-singleView#content .single-view #carousel-hairfie .item .outer-img {
-  height: 570px; }
+  height: 100%; }
 
 .hairfie-singleView#content .single-view #carousel-hairfie .pricetag {
   font-size: 1.6em;
@@ -14885,6 +14886,13 @@ section.home-footer .row > div p {
   position: absolute;
   bottom: 0;
   left: 100%; }
+
+@media screen and (max-width: 767px) {
+  .hairfie-singleView#content .single-view .like-group {
+    z-index: 100000;
+    position: absolute;
+    bottom: 0;
+    left: 0; } }
 
 .hairfie-singleView#content .single-view .like-group .like-btn {
   border-top: 1px solid #f9f9f9;
